--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-datepicker": "^8.9.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.0",
     "react-phone-number-input": "^3.4.13",
     "react-resizable-panels": "^3.0.6",
@@ -70,6 +71,7 @@
     "eslint-config-next": "15.5.2",
     "prisma": "^6.16.2",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
